--- a/docs/项目分层设计.md
+++ b/docs/项目分层设计.md
@@ -1,3 +1,5 @@
+IDEA： https://www.cnblogs.com/daanshenghuo/p/12525300.html
+
 http://www.iocoder.cn/Spring-Boot/Dubbo/?self
 
 设计模式：规约模式（Specification-Pattern）
